# pytest-django-migrations

./: .gitignore  CHANGELOG.rst  LICENSE.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
docs/source/: conf.py  index.rst
pytedjmi/: __init__.py  core.py  urls.py
tests/: settings.py  test_core.py
tests/migrations/: 0001_initial.py  0002_later.py  0003_latest.py
tests/test_migrations/: test_core.py  urls.py
