[tool.poetry]
name = "pytedjmi"
version = "0.4.1"
description = "Test Django migrations through Pytest."
authors = ["Kit La Touche <kit@transneptune.net>"]
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.plugins."pytest11"]
pytedjmi = "pytedjmi.core"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^3.0"
django = "^2.2"
pytest-django = "^3.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "*"
flake8 = "*"
isort = "*"
pytest-cov = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
tox = "*"

[tool.black]
py36 = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
